Commit intermediate changes